feat: global integrity audit and fixes - added contact page, fixed dead links, stabilized map markers and addressed null safety lints